--- a/css/styles.css
+++ b/css/styles.css
@@ -11629,6 +11629,15 @@ body {
     border-left: 0.5rem solid #64a19d;
   }
 }
+.projects-section .featured-left-text {
+  padding: 2rem;
+}
+@media (min-width: 992px) {
+  .projects-section .featured-left-text {
+    padding: 0 0 0 2rem;
+    border-right: 0.5rem solid #64a19d;
+  }
+}
 .projects-section .project-text {
   padding: 3rem;
   font-size: 90%;
